<resources>
    <string name="app_name">Wholeheartedly</string>

    <string name="about">Hello, world, my name is Sergei\nThere is something that I’d like to share\nWith you, good people - both young and old\nThose you love and about whom you care \nI have riches that digits can’t measure \nCountless beautiful, meaningful words \nWhich, combined, into rhymeful phrases\nCan melt hearts and outshine even gold\nIf you’re looking for a unique present  \nFor your special significant other \nOr a friend, sister, brother, or parent \nThen you don’t need to search any further!\nSimply write me about that person \nMemories, cherished moments, events\nI will turn your story into an exclusive poem\nWhich only your dear ones will understand!\n</string>
    <string name="title_activity_examples">ExamplesActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="text2">Those who say "age is just a number" - must be really smart\n
Years keep passing, but you stay extremely young at heart\n
You can act like a gentleman, a knight on a white horse\n
And still remain the biggest hooligan on planet Earth!\n\n

You can cheer me up, then drive me crazy in no time\n
You are more than a husband, you are my partner in crime\n
Each day with you is an adventure for me and our 3 daughters\n
And while we have you with us, there is nothing that can stop us!\n\n
</string>

    <string name="text1">When blood red leaves start covering the ground\n
The numbers of degrees gets close to zero\n
In fog, the morning view gets suddenly enshrouded\n
And eerie becomes all the atmosphere\n\n

When sun rays show up early every morning\n
But days become so short and nights get longer\n
Winds howl and raindrops fall, affirming\n
That summer’s gone and hidden in the yonder\n\n

When boots and hats get once again in fashion\n
And swimsuits get replaced with coats and scarves\n
Sunlight turns bleak, the sky starts looking ashen\n
Until night falls and lights the sky with stars\n\n

That’s when I realize that autumn gives us\n
So many reasons to sit by the fireplace\n
To drink some tea and listen to wind’s whistles\n
While waiting for the falling of snowflakes\n\n

Though every season has its special charm\n
And there is no such thing as bad weather\n
I’ll stay the happy person that I am\n
Only if you and I remain together\n</string>

    <string name="text">I took you from the shelter as a puppy\n
You were so young and full of energy\n
My wife, kids and myself, we were so lucky\n
To have such a member in our family\n\n

Being half-whippet, you were quite an athlete \n
You could maneuver faster than a squirrel\n
No one could catch you, once you started running\n
You always were too playful to stand still\n\n

And so we lived together, all these years\n
It was us - humans, you, then Lily, too\n
If someone asked what makes me really happy\n
A fine example would be - having you\n\n

To see the happy facial expression\n
Whenever you ‘’cleaned’’ empty yogurt cans\n
Each time we sang and you ate b-day cupcakes\n
While playing with kids, being hugged by them\n\n

While sleeping on my old couch, while swimming\n
While playing fetch and fighting for the ball\n
While walking a long distance, every evening\n
Even when the weather was damn cold\n\n

I will never forget your and Lily’s prank\n
When you got unleashed and got sprayed by a skunk\n
The mixture of tomato juice with your and Lily’s fur\n
Looked like a shredded body, smeared on a door\n\n

And even though you are no longer with us\n
And those old times are gone and won’t return\n
I hope that you are in a better place now\n
My dearest friend, for whom I’ll always yearn\n\n</string>
    <string name="title_activity_quiz">QuizActivity</string>
    <string name="just_answer">Just answer a short list of questions regarding a person you hold dear and remember - the more information you provide, the more detailed and interesting your poem will get!\n</string>
    <string name="logo">Logo</string>
    <string name="welcome_text">There are many different presents one can give, but I will write one that truly stands out. Let\'s give your loved ones a SPECIAL treat!</string>
    <string name="start">"     Start"</string>
    <string name="examples">"     "Examples</string>
    <string name="aboutButton">"     "About</string>
    <string name="prices">"     "Prices</string>
    <string name="photo">Photo</string>
    <string name="key_price_tag">key_price_tag</string>
    <string name="_2_3_quatrains_15">"     "2 – 3 quatrains</string>
    <string name="_4_6_quatrains_25">"     "4 – 6 quatrains</string>
    <string name="_7_10_quatrains_40">"     "7 – 10 quatrains</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="send">Send</string>
    <string name="select_option">Select one of the options to continue</string>
    <string name="email">sergei.pismeny@gmail.com</string>
    <string name="mailto">mailto</string>
    <string name="mail_subject">Wholeheartedly</string>
    <string name="chooser_intent_title">Send Email</string>
    <string name="price1">2 – 3 quatrains</string>
    <string name="price2">4 – 6 quatrains</string>
    <string name="price3">7 – 10 quatrains</string>
    <string name="left">Left</string>
    <string name="right">"Right "</string>
    <string name="if_you_don_t_know_the_answer">If you don\'t know the answer to a certain question, you may press \"next\", without typing anything.</string>
    <string name="example_">Examples</string>
    <string name="prices_">Prices</string>
    <string name="quiz_">Quiz</string>

    <string-array name="questions_array">
        <item>0</item>
        <item>Name:</item>
        <item>Profession:</item>
        <item>Skills:</item>
        <item>Hobby:</item>
        <item>Languages s/he knows:</item>
        <item>A sphere s/he is an expert in:</item>
        <item>Favorite book:</item>
        <item>Favorite movie:</item>
        <item>Favorite sport activity:</item>
        <item>Favorite meal:</item>
        <item>Personality traits that you appreciate:\n\nKindness, beauty, intuition, ability to listen, self criticism etc</item>
        <item>Events and recollections:\n\nCircumstances you got to know each other under, a trip you\'ve been to together, help in your moment of need, a surprise made for you etc</item>
        <item>Geographic location:\n\nFavorite cafe, bar, pub, etc / Countries, where the person has traveled / City on birth or where s/he living now</item>
        <item>Outlook:\n\nIs that person shorter or taller that most other people? / Haircut / Dressing style / Beard / Mustache</item>
        <item>Good or bad habits:\n\nLoves to help adult people / Loves to donate / Perfectionism at work / Smoking / Etc!</item>
        <item>How has that person impacted you?</item>
        <item>Similarities or differences between you and that person:\n\nOr, maybe, you would like to emphasize how you complement each other?</item>
        <item>What would you like to wish to your dear person?\n\nThese wishes should be related to the event, be it health &amp; wealth wishes for a b-day,healthy relationship, harmony and many children for a wedding day or a successful career for someone who just finished studying in a college etc</item>
    </string-array>

</resources>
